--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -1,21 +1,21 @@
 ---
 import ExperienceItem from "./ExperienceItem.astro"
 const EXPERIENCIE = [
-  {
-    date: "Actualmente...",
-    title: "Creador de Contenido",
-    company: "Twitch",
+  { 
+    date: "March 2024 - Actual",
+    title: "Software Developer",
+    company: "ICONOS SOFTWARE SL",
     description:
-      "Divulgo sobre programación y desarrollo web en diferentes plataformas. Galardonado como mejor creador de contenido de habla no-inglesa en 2022 y mejor comunidad en 2023 por GitHub.",
-    link: "https://twitch.tv/midudev",
+      "In my role, I have actively participated in the development and enhancement of enterprise solutions through the creation of APIs and the integration of advanced functionalities such as AI document processing in an ERP system. Using the .NET ecosystem to deliver customized and efficient solutions to diverse businesses.",
+    link: "/CvRubenDiazDugoEn.pdf",
   },
-  {
-    date: "Septiembre 2022",
-    title: "Principal Frontend Engineer",
-    company: "Adevinta Spain",
-    description:
-      "Responsable de la plataforma, componentes y utilidades para la creación y desarrollo de aplicaciones web. Mejora de un 30% en la entrega de software. Implantación de medidas de integración continua y despliegue con A/B testing en más de 15 equipos.",
-  },
+  // {
+  //   date: "Septiembre 2022",
+  //   title: "Principal Frontend Engineer",
+  //   company: "Adevinta Spain",
+  //   description:
+  //     "Responsable de la plataforma, componentes y utilidades para la creación y desarrollo de aplicaciones web. Mejora de un 30% en la entrega de software. Implantación de medidas de integración continua y despliegue con A/B testing en más de 15 equipos.",
+  // },
 ]
 ---
 
