--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,18 +10,17 @@ const currentYear = new Date().getFullYear()
   >
     <span class="text-sm sm:text-center text-zinc-800/90 dark:text-zinc-200/90"
       >© {currentYear}
-      <a href="https://midu.dev/" class="hover:underline">midudev</a>. Casi
-      todos los derechos reservados
+      <a href="https://midu.dev/" class="hover:underline">Thanks to midudev for the template ❤️</a>.
     </span>
     <ul
       class="flex flex-wrap items-center mt-3 text-sm font-medium dark:text-white/90 sm:mt-0"
     >
       <li>
-        <a href="/#sobre-mi" class="hover:underline me-4 md:me-6">Sobre mí</a>
+        <a href="/#sobre-mi" class="hover:underline me-4 md:me-6">About me</a>
       </li>
       <li>
         <a id="contacto" href="mailto:miduga@gmail.com" class="hover:underline"
-          >Contacto</a
+          >Contact me</a
         >
       </li>
     </ul>
