--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,22 +3,22 @@ import ThemeToggle from "./ThemeToggle.astro"
 
 const navItems = [
   {
-    title: "Experiencia",
+    title: "Experience",
     label: "experiencia",
     url: "/#experiencia",
   },
   {
-    title: "Proyectos",
+    title: "Projects",
     label: "proyectos",
     url: "/#proyectos",
   },
   {
-    title: "Sobre mí",
+    title: "About me",
     label: "sobre-mi",
     url: "/#sobre-mi",
   },
   {
-    title: "Contacto",
+    title: "Contact",
     label: "contacto",
     url: "mailto:miduga@gmail.com",
   },
