--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,8 +12,8 @@ import Hero from "@/components/Hero.astro"
 ---
 
 <Layout
-  title="Porfolio de Rubén Díaz Dugo - Desarrollador Full Stack"
-  description="Contrata a midudev para crear tu aplicación web o móvil. Desarrollador Web y Creador de Contenido. Especializado en crear aplicaciones únicas."
+  title="Rubén Díaz Dugo's Portfolio - Full Stack Developer"
+  description="Hire Ruben to create your web or mobile application. Software Developer. Specialized in creating multiplatform applications."
 >
   <main class="px-4">
     <SectionContainer class="py-16 md:py-36">
