cambiado la puta url

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -20,7 +20,7 @@ const navItems = [
   {
     title: "Contact",
     label: "contacto",
-    url: "mailto:miduga@gmail.com",
+    url: "mailto:rubendugo2003@gmail.com",
   },
 ]
 ---
